tests/baselines/reference/typeGuardOfFormTypeOfEqualEqualHasNoEffect.errors.txt
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(9,12): error TS2454: Variable 'strOrNum' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(13,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r1' must be of type 'string', but here has type 'string | number'.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(13,14): error TS2454: Variable 'strOrNum' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(16,12): error TS2454: Variable 'strOrBool' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(20,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r2' must be of type 'boolean', but here has type 'string | boolean'.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(20,14): error TS2454: Variable 'strOrBool' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(23,12): error TS2454: Variable 'numOrBool' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(27,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r3' must be of type 'number', but here has type 'number | boolean'.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(27,15): error TS2454: Variable 'numOrBool' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(30,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(30,12): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(34,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r4' must be of type 'C', but here has type 'string | C'.
typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts(34,14): error TS2454: Variable 'strOrC' is used before being assigned.


==== typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts (13 errors) ====
    class C { private p: string };
    
    var strOrNum: string | number;
    var strOrBool: string | boolean;
    var numOrBool: number | boolean
    var strOrC: string | C;
    
    // typeof x == s has not effect on typeguard
    if (typeof strOrNum == "string") {
               ~~~~~~~~
!!! error TS2454: Variable 'strOrNum' is used before being assigned.
        var r1 = strOrNum; // string | number
    }
    else {
        var r1 = strOrNum; // string | number
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r1' must be of type 'string', but here has type 'string | number'.
!!! related TS6203 typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts:10:9: 'r1' was also declared here.
                 ~~~~~~~~
!!! error TS2454: Variable 'strOrNum' is used before being assigned.
    }
    
    if (typeof strOrBool == "boolean") {
               ~~~~~~~~~
!!! error TS2454: Variable 'strOrBool' is used before being assigned.
        var r2 = strOrBool; // string | boolean
    }
    else {
        var r2 = strOrBool; // string | boolean
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r2' must be of type 'boolean', but here has type 'string | boolean'.
!!! related TS6203 typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts:17:9: 'r2' was also declared here.
                 ~~~~~~~~~
!!! error TS2454: Variable 'strOrBool' is used before being assigned.
    }
    
    if (typeof numOrBool == "number") {
               ~~~~~~~~~
!!! error TS2454: Variable 'numOrBool' is used before being assigned.
        var r3 = numOrBool; // number | boolean
    }
    else {
        var r3 =  numOrBool; // number | boolean
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r3' must be of type 'number', but here has type 'number | boolean'.
!!! related TS6203 typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts:24:9: 'r3' was also declared here.
                  ~~~~~~~~~
!!! error TS2454: Variable 'numOrBool' is used before being assigned.
    }
    
    if (typeof strOrC == "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
        var r4 = strOrC; // string | C
    }
    else {
        var r4 = strOrC; // string | C
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r4' must be of type 'C', but here has type 'string | C'.
!!! related TS6203 typeGuardOfFormTypeOfEqualEqualHasNoEffect.ts:31:9: 'r4' was also declared here.
                 ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }